<resources>
    <string name="app_name">MAD Auto Care</string>
    <string name="navigation_draw_open">open navigation drawer</string>
    <string name="navigation_draw_close">close navigation drawer</string>
    <string name="addcode">Item Code</string>
    <string name="addname">Item Name</string>
    <string name="addprice">Item Price</string>
    <string name="addquantity">Item Quantity</string>
    <string name="addimage">Item Image</string>
    <string name="submit">Submit</string>
    <string name="AddItems">Add Items</string>
    <string name="AddItemsDS">Add items to company stores..</string>
    <string name="UpdateQuantity">Update Quantity</string>
    <string name="UpdateQuantityDS">Update items quantity company have..</string>
    <string name="Stores">Stores</string>
    <string name="StoresDS">Display what you have in your stores..</string>
    <string name="DeleteItems">Delete Items</string>
    <string name="DeleteItemsDs">Delete item what your company have..</string>
    <string name="Sales">Sales</string>
    <string name="SalesDS">Sales for this month...</string>
    <string name="Settings">Settings</string>
    <string name="SettingsDS">You can mange your profile..</string>
    <string name="delete">Delete</string>
    <string name="id">Supplier Id</string>
    <string name="image">Supplier Image</string>
    <string name="name">Supplier Name</string>
    <string name="email">Supplier Email</string>
    <string name="number">Phone Number</string>
    <string name="order">Orders</string>
    <string name="orderDS">You have order who ordered by admin..</string>
    <string name="complete">Completes</string>
    <string name="completeDS">You have complete orders..</string>
    <string name="date">Date</string>
    <string name="time">Time</string>

    <!--    Admin Category Page String variables-->
    <string name="admin_category_button">Click Here</string>
    <string name="admin_category_co">Customer and Orders</string>
    <string name="admin_category_ss">Sales and Suppliers</string>
    <string name="admin_category_co_me">Manage Customer and Orders</string>
    <string name="admin_category_ss_me">Manage Sales and Suppliers</string>

    <!--    Supplier Page String variables-->
    <string name="Add">Register Supplier</string>
    <string name="add_btn">Register</string>
    <string name="Add_mess">Register to the supplier in the system </string>
    <string name="view">View All Suppliers</string>
    <string name="view_btn">View</string>
    <string name="view_mess">View the all suppliers in this system</string>

    <!--    Supplier Registration String variables-->
    <string name="Enter_supplier_name">Enter the Supplier Name</string>
    <string name="Enter_supplier_email">Enter the Supplier Email</string>
    <string name="Enter_supplier_pass">Enter the Password</string>
    <string name="Enter_supplier_number">Enter the Mobile Number</string>

    <!--    Single Supplier View String variables-->
    <string name="Supplier_name">Supplier Name</string>
    <string name="Supplier_email">Supplier Email</string>
    <string name="Supplier_phone_number">Supplier Moblie Number</string>

    <!--    Update Supplier Page String variables-->
    <string name="update_supplier_name">Supplier Name</string>
    <string name="update_supplier_password">Supplier Password</string>
    <string name="update_supplier_phone_number">Supplier Moblie Number</string>
    <string name="update_supplier_name_text">Update Supplier Name</string>
    <string name="update_supplier_password_text">Update Supplier Password</string>
    <string name="update_supplier_phone_number_text">Update Supplier Moblie Number</string>
    <string name="update_supplier">Update Supplier</string>

    <!--    Sales and Supplier Page String variables-->
    <string name="Dashbord_sales_count_T">Total Sales</string>
    <string name="Dashbord_sales_count">0</string>
    <string name="Dashbord_supplier_count_T">Total Suppliers</string>
    <string name="Dashbord_supplier_count">0</string>
    <string name="Dashbord_name">Sales And Supplier Dashboard</string>
    <string name="Dashbord_supplier">Manage Suppliers</string>
    <string name="Dashbord_supplier_mess">You can insert the suppliers and also you update and delete the suppliers</string>
    <string name="Dashbord_supplier_btn">Click Here</string>
    <string name="Dashbord_sales">Manage Sales</string>
    <string name="Dashbord_sales_mess">You can insert the Sales and also you show the all sales.</string>
    <string name="Dashbord_sales_btn">Click Here</string>

    <!--    Sales Page String variables-->
    <string name="sales_dash">Manage Sales</string>
    <string name="sales_add_T">Add Sales</string>
    <string name="sales_add_mess">You Can Add Sales and Send to the Customer E-Bill.</string>
    <string name="sales_add_btn">ADD</string>
    <string name="sales_view_T">View Sales</string>
    <string name="sales_view_mess">You Can View The All Sales.</string>
    <string name="sales_view_btn">View</string>

    <!--    Add Sales Page String variables-->
    <string name="add_sales_name">Enter the Customer Name</string>
    <string name="add_sales_email">Enter the Customer E-mail</string>
    <string name="add_sales_phone">Enter the Customer Mobile Number</string>
    <string name="add_sales_amount">Enter the Customer Bill Amount</string>
    <string name="add_sales_type">Enter the Customer Billing Type</string>
    <string name="add_sales_T">Add Sales</string>
    <string name="add_sales">Submit</string>
    <string name="add_radio_parts">Parts</string>
    <string name="add_radio_service">Service</string>


    <!--    Add Service Details String Variables-->


    <!--    Single Sales View String variables-->
    <string name="Sales_name">Sales Name</string>
    <string name="Sales_email">Sales Email</string>
    <string name="Sales_type">Sales_type</string>
    <string name="Sales_amount">1000</string>

    <!--    View All Sales String variables-->
    <string name="View_Sales">View Sales</string>

    <!--    Add Service Details String Variables-->

    <string name="btn1">Full Service</string>
    <string name="btn2">Normal Service</string>
    <string name="fullservice">Full Service</string>
    <string name="col1">STAGE 1: CHECK VEHICLE HISTORY, MILEAGE, SERVICE SCHEDULE REQUIREMENTS</string>
    <string name="row1content">STAGE 2:  ROAD TEST</string>
    <string name="row2">STAGE 3: VEHICLE ON FLOOR</string>
    <string name="normalservice">Normal Service</string>


</resources>

