<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/wp5055268_1_">

    <EditText
        android:id="@+id/addcode"
        android:layout_width="268dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView7"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="73dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="71dp"
        android:background="@drawable/inputs"
        android:hint="@string/addcode"
        android:inputType="textPersonName"
        android:padding="10dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white">

    </EditText>

    <TextView
        android:id="@+id/textView6"
        android:layout_width="156dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/BackButton"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="38dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="217dp"
        android:text="@string/AddItems"
        android:textColor="@color/white"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView6"
        android:layout_alignStart="@+id/textView6"
        android:layout_marginStart="0dp"
        android:layout_marginTop="2dp"
        android:text="@string/AddItemsDS"
        android:textColor="@color/white"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/addquantity"
        android:layout_width="268dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/addprice"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="74dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="70dp"
        android:background="@drawable/inputs"
        android:hint="@string/addquantity"
        android:inputType="number"
        android:padding="10dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white">

    </EditText>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/addsubmit"
        android:layout_width="139dp"
        android:layout_height="35dp"
        android:layout_below="@+id/addquantity"
        android:layout_alignStart="@+id/addquantity"
        android:layout_marginStart="0dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/submit_button_style"
        android:text="@string/submit"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/addprice"
        android:layout_width="268dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/addname"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="74dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="70dp"
        android:background="@drawable/inputs"
        android:hint="@string/addprice"
        android:inputType="number"
        android:padding="10dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white">

    </EditText>

    <EditText
        android:id="@+id/addname"
        android:layout_width="268dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/addcode"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="73dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="71dp"
        android:background="@drawable/inputs"
        android:hint="@string/addname"
        android:inputType="textPersonName"
        android:padding="10dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white">

    </EditText>

    <ImageButton
        android:id="@+id/BackButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="38dp"
        android:layout_marginTop="40dp"
        android:backgroundTint="#7B32F4"
        app:srcCompat="@drawable/ic_baseline_arrow_back_24" />

</RelativeLayout>